# cli-plugin-docker

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
nb_cli_plugin_docker/: cli.py  exception.py  handler.py  plugin.py  utils.py
nb_cli_plugin_docker/docker/: _main.py
nb_cli_plugin_docker/static/reverse/docker/: _main.py  gunicorn_conf.py
nb_cli_plugin_docker/template/docker/: _helpers.Dockerfile.jinja  docker-compose.yml.jinja  forward.Dockerfile.jinja  get_driver_type.py.jinja  reverse.Dockerfile.jinja
