[tool.poetry]
name = "nb-cli-plugin-docker"
version = "0.2.0"
description = "docker support for nb-cli"
authors = ["yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonebot/cli-plugin-docker"
repository = "https://github.com/nonebot/cli-plugin-docker"
documentation = "https://github.com/nonebot/cli-plugin-docker#readme"
keywords = ["nonebot", "cli", "docker"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.8"
nb-cli = "^1.0.2"
noneprompt = "^0.1.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.3.0"
nonemoji = "^0.1.2"
pre-commit = "^2.16.0"

[tool.poetry.plugins.nb]
docker = "nb_cli_plugin_docker.plugin:install"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
ignore = ["nb_cli_plugin_docker/docker/"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
